# doodle-rust

./: CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
crates/doodle-capi/: Cargo.toml  cbindgen.toml
crates/doodle-capi/include/: doodle.h
crates/doodle-capi/src/: lib.rs
crates/doodle-core/: Cargo.toml
crates/doodle-core/src/: ast.rs  diag.rs  drive.rs  lib.rs  machine.rs  parse.rs  resolve.rs  source.rs  span.rs  stage.rs  unicode.rs
crates/doodle-core/src/diag/: code.rs  mod.rs  render.rs
crates/doodle-core/src/lex/: escape.rs  mod.rs  number.rs  string.rs  token.rs  triple.rs
crates/doodle-core/src/parse/: collection.rs  control.rs  decl.rs  decode.rs  literal.rs  moddecl.rs  postfix.rs  stmt.rs  typedecl.rs
crates/doodle-core/src/resolve/: walk.rs
crates/doodle-core/tests/: ast_snapshot.rs  broken_syntax.rs  diag_render.rs  drive_smoke.rs  lang_corpus.rs  lex.rs  parse.rs  resolve.rs
crates/doodle-core/tests/broken-syntax/: 01-missing-end.doodle  02-equals-in-if.doodle  03-unclosed-string.doodle  04-missing-comma.doodle  05-stray-do.doodle  06-chained-comparison.doodle  07-missing-then.doodle  08-missing-fn-end.doodle  09-unclosed-triple-string.doodle  10-unclosed-bytes.doodle  11-missing-comma-list.doodle  12-bad-escape.doodle  13-keyword-as-name.doodle  14-double-underscore-number.doodle  15-else-without-if.doodle  16-unbalanced-paren.doodle  18-missing-while-do.doodle  19-keyword-as-param.doodle  20-chained-equality.doodle  24-const-reassignment.doodle  25-assign-undeclared.doodle  26-duplicate-declaration.doodle  27-procedure-in-expression.doodle  28-if-expression-missing-else.doodle  29-non-producing-branch.doodle  30-fn-falls-off-end.doodle  31-shadowing-warning.doodle  32-missing-index-bracket.doodle  33-with-missing-do.doodle  34-positional-after-keyword.doodle  35-record-missing-end.doodle  36-stray-close-paren.doodle  37-extra-decimal-point.doodle  38-margin-under-indent.doodle  39-tab-margin-mix.doodle  40-non-ascii-bytes.doodle  41-unicode-escape-in-bytes.doodle  42-empty-interpolation.doodle  43-comment-in-interpolation.doodle  44-newline-in-interpolation.doodle  (+2 more)
crates/doodle-core/tests/snapshots/: ast_snapshot__hand_built_one_statement_ast_debug.snap  broken_syntax__01_missing_end.snap  broken_syntax__02_equals_in_if.snap  broken_syntax__03_unclosed_string.snap  broken_syntax__04_missing_comma.snap  broken_syntax__05_stray_do.snap  broken_syntax__06_chained_comparison.snap  broken_syntax__07_missing_then.snap  broken_syntax__08_missing_fn_end.snap  broken_syntax__09_unclosed_triple_string.snap  broken_syntax__10_unclosed_bytes.snap  broken_syntax__11_missing_comma_list.snap  broken_syntax__12_bad_escape.snap  broken_syntax__13_keyword_as_name.snap  broken_syntax__14_double_underscore_number.snap  broken_syntax__15_else_without_if.snap  broken_syntax__16_unbalanced_paren.snap  broken_syntax__17_let_missing_value.snap  broken_syntax__18_missing_while_do.snap  broken_syntax__19_keyword_as_param.snap  broken_syntax__20_chained_equality.snap  broken_syntax__21_return_outside_callable.snap  broken_syntax__22_break_outside_loop.snap  broken_syntax__23_continue_outside_block.snap  broken_syntax__24_const_reassignment.snap  broken_syntax__25_assign_undeclared.snap  broken_syntax__26_duplicate_declaration.snap  broken_syntax__27_procedure_in_expression.snap  (+55 more)
crates/doodle-wasm/: Cargo.toml
crates/doodle-wasm/src/: lib.rs
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
fuzz/fuzz_targets/: full.rs  fuzz_smoke.rs  lex.rs  parse.rs
tools/conformance-runner/: Cargo.toml
tools/conformance-runner/src/: directive.rs  main.rs  matcher.rs  model.rs
(+90 files in other folders)
