[workspace]
resolver = "3"
members = ["crates/doodle-core", "tools/conformance-runner"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/doodle-lang/doodle-rust"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
