[package]
name = "doodle-capi"
description = "The Doodle engine's C ABI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# A staticlib is the embedding-friendly form: the C host links the archive
# directly into its own binary (one artifact, nothing to locate at runtime, far
# less cross-platform loader variance than a dynamic library). The C smoke test
# links it statically. A cdylib would be added only if a dynamic-loading /
# plugin consumer needs one.
[lib]
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
doodle-core = { path = "../doodle-core" }
