[package]
name = "doodle-core"
description = "The Doodle engine: front end, resumable machine, heap/GC, and embedding API."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
unicode-ident = "1"
unicode-normalization = "0.1"

[dev-dependencies]
insta = "1"
